Update title and HR conclusion

--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
 -->
 <html lang="eng">
 	<head>
-		<title>Chase Carlson Portfolio</title>
+		<title>Chase Carlson's portfolio website</title>
 		<meta charset="utf-8" />
 		<meta name="description" content="Chase Carlson's data analyst portfolio website. Created to showcase analytical projects to potential employers in the retail industry.">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		
 	</head>
 	<body class="is-preload">
 
@@ -168,8 +167,8 @@
 							</div>
 							<h4>Conclusion</h4>
 							<p>Although we are not able to difinitively conclude that current attrition is caused by salary, the company's salary structure and practices clearly need to be reevaluated by management to ensure fair and equitable pay across races, gender, qualifications, and job performance.</p>
-							<p>Improving the pay structure will help reduce the heavy costs of employee turnover, and ensure the company is retaining its top talent, while replacing low performing individuals with diverse talent from all races and backgrounds. Adding job performance data, job satisfaction ratings, and additional exit survey questions to this dataset will help pinpoint the root causes of attrition, and help us identify the right actions to take to make the best decision for the business and its employees
-								to make progress toward employee retention and job satisfaction.</p>
+							<p>Improving the pay structure will help reduce the heavy costs of employee turnover, and ensure the company is retaining its top talent, while replacing low performing individuals with diverse talent from all races and backgrounds. Adding job performance data, job satisfaction ratings, 
+								and additional exit survey questions to this dataset will help pinpoint the root causes of attrition, and help us identify the right actions to take to make the best decision for the business and make progress toward employee retention and job satisfaction.</p>
 						</article>
 
 						<!-- Projects -->
