Add "read more" and "read less" buttons

--- a/index.html
+++ b/index.html
@@ -47,18 +47,19 @@
 								raw data into actionable insights that help businesses make more effective decisions, they seek to identify solutions to problems and improve processes, and report their findings to 
 								management and other key stakeholders. As a retail manager, this was always my favorite hat to wear, which is why I'm looking to take a step away from management for awhile to focus on
 								my passion for analytics.<p>
-
 							<p>I am excited to share my work with you. Here you will find analytical projects related to my professional and personal interests, ranging from business dashboards to sports, 
 								music, and climate-related vizzes. I am constantly learning new skills and looking forward to bringing you more projects soon!</p>
 						</article>
 
 						<!-- Projects -->
-						<article id="projects">
+						<article id="projects" data-project="hr-analytics">
 							<h2><a title = "View on Tableau Public" href="https://public.tableau.com/views/HRPeopleAnalytics_16751399411520/ATTRITIONDASHBOARD?:language=en-US&:display_count=n&:origin=viz_share_link" class="major">HR Attrition Dashboard | Tableau</a></h2>
 							<a title = "View on Tableau Public" href="https://public.tableau.com/views/HRPeopleAnalytics_16751399411520/ATTRITIONDASHBOARD?:language=en-US&:display_count=n&:origin=viz_share_link"><span class="image main"><img src="images/hr_attrition_dashboard.webp" alt="HR Attrition Visualization" /></span></a>
 							<h4>Purpose</h4>
 							<p>This project is my entry into the Data In Motion LLC monthly data viz challenge. The assignment was to take on the role of an HR people analyst to find insight on termination trends, department turnover, salary, diversity rates, and more 
 								for over 4,000 (not real) employees. I decided to take the approach of creating a dashboard to help us understand what is driving attrition at the company, and what we can do to reduce employee turnover.</p>
+							<div class="read-more-container">	
+							
 							<h4>The Result</h4>
 							<p>After review, I have concluded there is insufficient data to determine the root-cause of attrition at the company. However, I suspect that the major contributing factors could have to do with the company's salary structure and people practices.
 								These factors appear to have been amplified during COVID, as demand and competition have grown for certain types of roles, and more people in Software, Sales, and Marketing started finding better opportunities and better salaries. I have the 
@@ -78,7 +79,6 @@
 									along with the previous mentioned recommendations so we can deep dive further.
 								</li>
 							</ol>
-							<p>Keep reading for the full analysis...</p>
 							<h4>Preparing the data</h4>
 							<p>In my initial exploration of the data I combed each field for accuracy and consistency, and to familiarize myself with the dataset. One thing that I noticed was inconsistencies in some of the gender values. For example there were 19 males recorded as "lesbian" and 7 females 
 								recorded as "gay". To handle these for visualization purposes, based on the gender options available I assigned any females listed as "gay" to "lesbian", and any males listed as "lesbian" to "gay". Perhaps an early indication of 
@@ -168,16 +168,21 @@
 							<h4>Conclusion</h4>
 							<p>Although we are not able to difinitively conclude that current attrition is caused by salary, the company's salary structure and practices clearly need to be reevaluated by management to ensure fair and equitable pay across races, gender, qualifications, and job performance.</p>
 							<p>Improving the pay structure will help reduce the heavy costs of employee turnover, and ensure the company is retaining its top talent, while replacing low performing individuals with diverse talent from all races and backgrounds. Adding job performance data, job satisfaction ratings, 
-								and additional exit survey questions to this dataset will help pinpoint the root causes of attrition, and help us identify the right actions to take to make the best decision for the business and make progress toward employee retention and job satisfaction.</p>
+								and additional exit survey questions to this dataset will help pinpoint the root causes of attrition, and help us identify the right actions to take to make the best decision for the business and make progress toward employee retention and job satisfaction.
+							</p>	
+						</div>
+						<button class="read-more-button">Read more...</button>
+						<button class="read-less-button">Read less...</button>
 						</article>
 
 						<!-- Projects -->
-						<article id="projects">
+						<article id="projects" data-project="interactive-resume">
 							<h2><a title = "View on Tableau Public" href="https://public.tableau.com/app/profile/chase.carlson/viz/InteractiveResume_16713412902270/Dashboard1" class="major">Interactive R&eacute;sum&eacute; | Tableau</a></h2>
 							<a title = "View on Tableau Public" href="https://public.tableau.com/app/profile/chase.carlson/viz/InteractiveResume_16713412902270/Dashboard1"><span class="image main"><img src="images/interactive_resume.webp" alt="Interactive resume" /></span></a>
 							<h4>Intro</h4>
 							<p>What better way is there to get to know me than through interacting with my experiences? I recently saw a LinkedIn post showing some of the creative ways people have made interactive r&eacute;sum&eacute;s in 
 								Tableau and I was inspired to create my own. </p>
+							<div class="read-more-container">
 							<h4>Purpose</h4>
 							<p>I decided to make this r&eacute;sum&eacute; to showcase my technical and creative skills to potential employers in the analytical space. When people think "Store Manager" they don't always associate it with the same
 								skills and responsibilities as a Business or Data Analyst, however, the roles have some extraordinarily similar qualities. <p>
@@ -189,9 +194,12 @@
 								in the center, with my hard and soft skills represented in the horizontal bubble chart below by half-circles (soft skills) and triangles (hard skills). Something that is not included in my r&eacute;sum&eacute; yet is that I have applied 
 								to receive my master's degree in Global Supply Chain Management at Portland State University, which starts in the Spring of 2023. Once I get admitted I will add it to my timeline as in-progress.<p>
 							</p>Hover over, or click each of the elements to explore!</p>
+						</div>
+						<button class="read-more-button">Read more...</button>
+						<button class="read-less-button">Read less...</button>
 						</article>
 						<!-- Projects -->
-						<article id="projects">
+						<article id="projects" data-project="global-superstore-dashboard">
 							<h2><a title = "View on Tableau Public" href="https://public.tableau.com/app/profile/chase.carlson/viz/GlobalSuperstoreDashboard_16747734773080/ExecutiveDashboard" class="major">Retail Dashboard | Tableau</a></h2>
 							<a title = "View on Tableau Public" href="https://public.tableau.com/app/profile/chase.carlson/viz/InteractiveResume_16713412902270/Dashboard1"><span class="image main"><img src="images/Retail Dashboard.webp" alt="Retail KPI dashboard" /></span></a>
 							<h4>Purpose</h4>
@@ -203,7 +211,8 @@
 								<li>Identify which categories, sub-categories, and products drove the biggest performance wins and losses</li>
 								<li>Customize how they can drill into their KPIs to create their own stories based on their uniqe challenges</li>
 							  </ul>
-							<h4>Preparing the data</h4>
+							<div class="read-more-container">	
+							  <h4>Preparing the data</h4>
 							  <p>The first thing that I did to set up the data was to join the Orders table with the Returns and People tables, and bring this static dataset up to the current time by using the expression: <p>
 								<pre><code>DATEADD('day', DATEDIFF('day',{MAX([Order Date (new)])},TODAY()-1),[Order Date])</code></pre>
 							<p>After deciding what I wanted to include in the dashboard and how I wanted users to interact, I started by creating custom date parameters to allow the user to either pick from a list 
@@ -298,10 +307,13 @@
 									</div>
 								</div>
 							<p>Check out the full dashboard on <a href="https://public.tableau.com/views/GlobalSuperstoreDashboard_16747734773080/ExecutiveDashboard?:language=en-US&:display_count=n&:origin=viz_share_link">Tableau Public</a>.</p>
+						</div>
+						<button class="read-more-button">Read more...</button>
+						<button class="read-less-button">Read less...</button>
 						</article>
 
 						<!-- Projects -->
-						<article id="projects">
+						<article id="projects" data-project="bellabeat-case-study">
 							<h2><a title = "View on Tableau Public" href="https://public.tableau.com/app/profile/chase.carlson/viz/BellabeatMarketingCaseStudy/Story1" class="major">Bellabeat Case Study | SQL</a></h2>
 							<a title = "View on Tableau Public" href="https://public.tableau.com/app/profile/chase.carlson/viz/BellabeatMarketingCaseStudy/Story1"><span class="image main"><img src="images/bellabeat_case_study.webp" alt="Bellabeat case study" /></span></a><br>
 							<h4>Purpose</h4>
@@ -311,6 +323,7 @@
 								small company, but they aspire to become a larger player in the global smart device market. 
 								I have been tasked with focusing on one of Bellabeat's core products and analyzing smart device data to gain insight into how consumers are already using their devices. The Insights I discover 
 								will then help guide the marketing strategy for the company.</p>
+							<div class="read-more-container">	
 							<u>Key business questions</u>
 							<p>To get started, I was asked to analyze smart device usage data to gain insight into how consumers use non-Bellabeat smart devices. The following questions will guide my analysis:</p>
 							<ol type="1">
@@ -348,16 +361,20 @@
 								be static images that display my results, however, for this particular project I wanted to give real viewers the chance to customize their interaction with the data. Therefore, the horizontal activity bar chart and the 
 								sleep vs. activity scatter are both able to to be filtered for different activities.</p>
 							<p style="text-align:right;">See this project also done in <a href="https://github.com/Chaser260/bellabeat-capstone-case-study">R Studio</a></p>
+						</div>
+						<button class="read-more-button">Read more...</button>
+						<button class="read-less-button">Read less...</button>
 						</article>
 
 						<!-- Projects -->
-						<article id="projects">
+						<article id="projects" data-project="pdx-weather-analysis">
 							<h2><a title = "View on GitHub" href="https://github.com/Chaser260/PDX-weather" class="major">PDX Weather Analysis | R</a></h2>
 							<a title = "View on GitHub" href="https://github.com/Chaser260/PDX-weather"><span class="image main"><img src="images/pdx_weather_analysis.webp" alt="Weather visualization project" /></span></a><br>
 							<h4>Purpose</h4>
 							<p>I'm fascinated by climate change and weather related events. To develop my skills with the program language R, I pulled real climate data for the PDX weather station dating back to 1938 from NOAA.gov, to help me visualize what climate in Portland has looked like over the last 84 years.</p>
 							<p>Prior to moving to Portland in 2011, I lived in Bend, OR. Growing up, all I ever heard about was how wet and rainy Portland was. People made it sound like Portland never saw the sun. In my exploration of the data, I found some interesting facts relating to precipitation, snow, and temperature change in Portland. All this Portland data made me curious to compare it to my home town of Bend, OR.<p>
 							<p>Spoiler alert! Although the average temperature in Portland has been rising over the past 80 years, temperatures in Bend have actually declined! </p>
+							<div class="read-more-container">
 							<b>Preparing the data</b>
 							<p>To start this project, I used the tidyverse package and the read_csv function to establish a live connection with the NOAA.gov site that provides the .csv file for the PDX weather station. 
 								Since the data didn't originally have column headers in the source file, I had to manually locate those in the README file and add them to my import. After determining the columns that I needed, 
@@ -438,10 +455,13 @@
 							<p>I can honestly say that this has been my favorite project so far because I can come back to it at any time to update any of the visuals to reflect recent events. I learned a ton about
 								R programming, and I'm excited to continue to produce more projects in the future. If you want to see my code with detailed notes, and the additional comparisons I made with Bend climate data,
 								please check it out on my <a href="https://github.com/Chaser260/PDX-weather">GitHub</a> page!</p>
-						</article>
+							</div>
+							<button class="read-more-button">Read more...</button>
+							<button class="read-less-button">Read less...</button>
+							</article>
 
 						<!-- Projects -->
-						<article id="projects">
+						<article id="projects" data-project="lebron-james-stats">
 							<h2><a title = "View on Tableau Public" href="https://public.tableau.com/app/profile/chase.carlson/viz/LebronJamesCareerStats_16615631128000/Dashboard1" class="major">LeBron James Stats | Excel</a></h2>
 							<a title = "View on Tableau Public" href="https://public.tableau.com/app/profile/chase.carlson/viz/LebronJamesCareerStats_16615631128000/Dashboard1"><span class="image main"><img src="images/lebron_james_stats.webp" alt="Lebron James career stats" /></span></a>
 							<h4>Purpose</h4>
@@ -449,6 +469,7 @@
 								the data in Excel below. I love following all the G.O.A.Ts in their respective sports, but I was particularly interested in putting it into a vizz. I decided to focus on Lebron because I knew he was getting 
 								close to breaking the all-time scoring record held by Kareem Abdul Jabar for the last 30 years. I wanted to see how he scored against each team he played against and at which arenas he plays best.
 							</p>
+							<div class="read-more-container">
 							<h4>Process</h4>
 							<p>For this project, I pulled dozens of tables from the nba.com stats pages and used powerquery to merge all of the files into a single Excel doc. To prepare the data for analysis, I used Text to Columns to
 								separate Date, Team, OPP, and home vs. away into separate columns, and then I replaced the "vs."" and "@" symbols with "home" and "away". I used Google Maps to get the latitude, longitude and name for each stadium, 
@@ -529,6 +550,9 @@
 							<p>This was a great project to get me started on learning Tableau. It helped me find specific Youtube channels to subscribe to that can help me in future projects, and I got tons of practice finding answers through the Tableau community forums
 								and Stack Overflow. If I had to do this project over, I would love to try to establish a live connection with the data so that it is easier to update and doesn't become outdated.</p>
 							<p>Check out the full dashboard on <a href="https://public.tableau.com/views/LebronJamesCareerStats_16615631128000/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link">Tableau Public</a>.</p>
+						</div>
+						<button class="read-more-button">Read more...</button>
+						<button class="read-less-button">Read less...</button>
 						</article>
 
 						<!-- About -->
