--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<h2 class="major">Intro</h2>
 							<p>Welcome to my portfolio! Being a data analyst has always been one of the many hats I wore as a store manager. A data analyst is someone who has the knowledge and skills to turn
 								raw data into actionable insights that help businesses make more effective decisions, they seek to identify solutions to problems and improve processes, and report their findings to 
-								management and other key stakeholders. As a retail manager, this was always my favorite hat to wear, which is why I'm looking to take a step away from management for awhile to focus on
+								management and other key stakeholders. As a retail manager, this was always my favorite hat to wear, which is why I'm looking to take a step away from store management for awhile to focus on
 								my passion for analytics.<p>
 							<p>I am excited to share my work with you. Here you will find analytical projects related to my professional and personal interests, ranging from business dashboards to sports, 
 								music, and climate-related vizzes. I am constantly learning new skills and looking forward to bringing you more projects soon!</p>
@@ -565,7 +565,7 @@
 								<p>I've spent the last 17 years in retail working directly with customers and front-line employees to deliver world-class retail experiences and business results. Most recently, I was responsible for managing 
 									a team of 15-45 retail employees and analyzing customer insights, sales KPIs, and operational metrics to generate data-driven insights and implement solutions to solve business challenges. As a Store Manager, 
 									I led through significant ambiguity each day to protect the business, improve processes, cut costs, and deliver exceptional experiences for our internal and external customers.</p>
-								<p>I am currently looking to transfer my skills to a global organization where I can challenge myself to solve difficult problems while being an individual contributor. My long-term goal is to grow with the company 
+								<p>I am currently looking to transfer my skills to a global organization where I can challenge myself to solve difficult problems while focusing on developing my analytical skills. My long-term goal is to grow with the company 
 									and continue to advance my knowledge, skills, and contributions at various levels of business analytics to help the organization make more effective and sustainable decisions. If you are a recruiter or a hiring 
 									manager, I would love to share how my experiences will add value to your team.</p>
 							</article>
