update about me section

--- a/index.html
+++ b/index.html
@@ -568,6 +568,7 @@
 								<p>I am currently looking to transfer my skills to a global organization where I can challenge myself to solve difficult problems while focusing on developing my analytical skills. My long-term goal is to grow with the company 
 									and continue to advance my knowledge, skills, and contributions at various levels of business analytics to help the organization make more effective and sustainable decisions. If you are a recruiter or a hiring 
 									manager, I would love to share how my experiences will add value to your team.</p>
+								<p><a title = "View on Tableau Public" href="https://public.tableau.com/app/profile/chase.carlson/viz/InteractiveResume_16713412902270/Dashboard1">View my interactive resume</a></p>
 							</article>
 
 						<!-- Contact -->
