make images open in a new tab

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 								top of the dashboard for gender, education, and race, so that the user could deep dive any or all of these diversity factors.</p>
 							<div class="image">
 								<div class="image fit">
-									<img title = "Click to enlarge" src="/images/hr_bans.webp" alt="Attrition KPIs" class="center">	
+									<img title = "Click to open in a new tab" src="/images/hr_bans.webp" alt="Attrition KPIs" class="center">	
 									<div class="description"><h6>Company Overview</h6></div>
 								</div>
 							</div>
