update about me

--- a/index.html
+++ b/index.html
@@ -988,8 +988,9 @@
 					and make more effective decisions through data analytics, data visualization, and operational
 					efficiency.
 					I currently hold a bachelor’s degree in Business with an emphasis in Small Business Management &
-					Entrepreneurship. In the Spring of 2023, I will begin pursuing a Master of Science degree in Global
-					Supply Chain Management at Portland State University. </p>
+					Entrepreneurship. In the Spring of 2023, started pursuing a Master of Science in Global
+					Supply Chain Management at Portland State University with an expected graduation date of December,
+					2024. </p>
 				<p>I've spent the last 17 years in retail working directly with customers and front-line employees to
 					deliver world-class retail experiences and business results. Most recently, I was responsible for
 					managing
@@ -1001,8 +1002,9 @@
 				<p>I am currently looking to transfer my skills to a global organization where I can challenge myself to
 					solve difficult problems while focusing on developing my analytical skills. My long-term goal is to
 					grow with the company
-					and continue to advance my knowledge, skills, and contributions at various levels of business
-					analytics to help the organization make more effective and sustainable decisions. If you are a
+					and continue to advance my knowledge, skills, and contributions at various levels of supply chain
+					and business analytics to help the organization make more effective and sustainable decisions. If
+					you are a
 					recruiter or a hiring
 					manager, I would love to share how my experiences will add value to your team.</p>
 				<p><a title="View on Tableau Public"
