--- a/index.html
+++ b/index.html
@@ -49,18 +49,15 @@
 			<!-- Intro -->
 			<article id="intro">
 				<h2 class="major">Intro</h2>
-				<p>Welcome to my portfolio! Being a data analyst has always been one of the many hats I wore as a store
-					manager. A data analyst is someone who has the knowledge and skills to turn
-					raw data into actionable insights that help businesses make more effective decisions, they seek to
-					identify solutions to problems and improve processes, and report their findings to
-					management and other key stakeholders. As a retail manager, this was always my favorite hat to wear,
-					which is why I'm looking to take a step away from store management for awhile to focus on
-					my passion for analytics.
-				<p>
-				<p>I am excited to share my work with you. Here you will find analytical projects related to my
-					professional and personal interests, ranging from business dashboards to sports,
-					music, and climate-related vizzes. I am constantly learning new skills and looking forward to
-					bringing you more projects soon!</p>
+				<p>Welcome to my portfolio website, a digital showcase of my passion for learning and problem solving
+					through data exploration and analysis. Here, I present a curated collection of projects that
+					represent my personal and professional interests. I utilize analytical tools such as Python, R,
+					Tableau, and Excel, and will continue to add more as I pick them up. Through these projects, I aim
+					to not only showcase my technical skills but also highlight my ability to generate actionable
+					insights and tell compelling stories from data. Clicking on the title or the thumbnail of any
+					project will take you to the platform where the project is posted publicly if you would like to see
+					the full product.</p>
+				<p> Enjoy!</p>
 			</article>
 
 			<!-- Projects -->
@@ -984,29 +981,26 @@
 			<article id="about">
 				<h2 class="major">About Me</h2>
 				<span class="image main"><img src="images/Profile Picture.webp" alt="Chase Carlson" /></span>
-				<p>Hi, my name is Chase, and I am passionate about helping people to better understand their business
-					and make more effective decisions through data analytics, data visualization, and operational
-					efficiency.
+				<p>Hi, my name is Chase, and I am a process-driven, solution-oriented individual passionate about
+					solving problems and improving operational efficiency. I am a self-starter, motivated by
+					opportunities to learn and apply new skills.
 					I currently hold a bachelor’s degree in Business with an emphasis in Small Business Management &
 					Entrepreneurship. In the Spring of 2023, started pursuing a Master of Science in Global
 					Supply Chain Management at Portland State University with an expected graduation date of December,
 					2024. </p>
 				<p>I've spent the last 17 years in retail working directly with customers and front-line employees to
 					deliver world-class retail experiences and business results. Most recently, I was responsible for
-					managing
-					a team of 15-45 retail employees and analyzing customer insights, sales KPIs, and operational
-					metrics to generate data-driven insights and implement solutions to solve business challenges. As a
-					Store Manager,
-					I led through significant ambiguity each day to protect the business, improve processes, cut costs,
-					and deliver exceptional experiences for our internal and external customers.</p>
+					managing a team of 15-45 retail employees and analyzing customer insights, sales KPIs, and
+					operational metrics to generate data-driven insights and implement solutions to solve business
+					challenges. As a Store Manager, I led through significant ambiguity each day to protect the
+					business, improve processes, cut costs, and deliver exceptional experiences for our internal and
+					external customers.</p>
 				<p>I am currently looking to transfer my skills to a global organization where I can challenge myself to
 					solve difficult problems while focusing on developing my analytical skills. My long-term goal is to
-					grow with the company
-					and continue to advance my knowledge, skills, and contributions at various levels of supply chain
-					and business analytics to help the organization make more effective and sustainable decisions. If
-					you are a
-					recruiter or a hiring
-					manager, I would love to share how my experiences will add value to your team.</p>
+					grow with the company and continue to advance my knowledge, skills, and contributions at various
+					levels of supply chain and business analytics. If you are a recruiter or a hiring manager, I would
+					love to share how my experiences will add value to your team.
+				</p>
 				<p><a title="View on Tableau Public"
 						href="https://public.tableau.com/app/profile/chase.carlson/viz/InteractiveResume_16713412902270/Dashboard1">View
 						my interactive resume</a></p>
