--- a/index.html
+++ b/index.html
@@ -988,17 +988,19 @@
 					Entrepreneurship. In the Spring of 2023, started pursuing a Master of Science in Global
 					Supply Chain Management at Portland State University with an expected graduation date of December,
 					2024. </p>
-				<p>I've spent the last 17 years in retail working directly with customers and front-line employees to
+				<p>I have 17 years of retail leadership and analytical experience working directly with customers and
+					front-line employees to
 					deliver world-class retail experiences and business results. Most recently, I was responsible for
-					managing a team of 15-45 retail employees and analyzing customer insights, sales KPIs, and
-					operational metrics to generate data-driven insights and implement solutions to solve business
-					challenges. As a Store Manager, I led through significant ambiguity each day to protect the
-					business, improve processes, cut costs, and deliver exceptional experiences for our internal and
-					external customers.</p>
+					building and developing a team of 15-45 retail employees and analyzing customer insights, sales
+					KPIs, and operational metrics to generate data-driven insights and implement solutions to solve
+					business challenges. As the Site Manager in a start-up environment, I planned, organized,
+					implemented, and continuously improved several processes including omnichannel programs, Customer
+					Returns, Digital Subscriptions, workforce management systems, inventory management systems, and
+					more...</p>
 				<p>I am currently looking to transfer my skills to a global organization where I can challenge myself to
-					solve difficult problems while focusing on developing my analytical skills. My long-term goal is to
-					grow with the company and continue to advance my knowledge, skills, and contributions at various
-					levels of supply chain and business analytics. If you are a recruiter or a hiring manager, I would
+					solve progressively difficult problems while continuously learning nea skills. My long-term goal is
+					to grow with the company and continue to advance my knowledge, skills, and contributions at various
+					levels of supply chain and business strategy. If you are a recruiter or a hiring manager, I would
 					love to share how my experiences will add value to your team.
 				</p>
 				<p><a title="View on Tableau Public"
