--- a/index.html
+++ b/index.html
@@ -989,14 +989,13 @@
 					Supply Chain Management at Portland State University with an expected graduation date of December,
 					2024. </p>
 				<p>I have 17 years of retail leadership and analytical experience working directly with customers and
-					front-line employees to
-					deliver world-class retail experiences and business results. Most recently, I was responsible for
-					building and developing a team of 15-45 retail employees and analyzing customer insights, sales
-					KPIs, and operational metrics to generate data-driven insights and implement solutions to solve
-					business challenges. As the Site Manager in a start-up environment, I planned, organized,
-					implemented, and continuously improved several processes including omnichannel programs, Customer
-					Returns, Digital Subscriptions, workforce management systems, inventory management systems, and
-					more...</p>
+					front-line employees to deliver world-class retail experiences and business results. Most recently,
+					I was responsible for building and developing a team of 15-45 retail employees and analyzing
+					customer insights, sales KPIs, and operational metrics to generate data-driven insights and
+					implement solutions to solve business and leadership challenges. As the Site Manager in a start-up
+					environment, I planned, organized, implemented, and continuously improved several processes
+					including omnichannel programs, Customer Returns, Digital Subscriptions, workforce management
+					systems, inventory management systems, and more...</p>
 				<p>I am currently looking to transfer my skills to a global organization where I can challenge myself to
 					solve progressively difficult problems while continuously learning nea skills. My long-term goal is
 					to grow with the company and continue to advance my knowledge, skills, and contributions at various
