--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@
 					implement solutions to solve business and leadership challenges. As the Site Manager in a start-up
 					environment, I planned, organized, implemented, and continuously improved several processes
 					including omnichannel programs, Customer Returns, Digital Subscriptions, workforce management
-					systems, inventory management systems, and more...</p>
+					systems, inventory management systems, and more.</p>
 				<p>I am currently looking to transfer my skills to a global organization where I can challenge myself to
 					solve progressively difficult problems while continuously learning nea skills. My long-term goal is
 					to grow with the company and continue to advance my knowledge, skills, and contributions at various
