update about me

--- a/index.html
+++ b/index.html
@@ -987,7 +987,11 @@
 					I currently hold a bachelor’s degree in Business with an emphasis in Small Business Management &
 					Entrepreneurship. In the Spring of 2023, started pursuing a Master of Science in Global
 					Supply Chain Management at Portland State University with an expected graduation date of December,
-					2024. </p>
+					2024. Course topics include strategic planning, sourcing, logistics, business analytics (forecasting
+					& optimization modeling), new product introduction, supplier relationship management, global
+					contract negotiations, and leadership. The program also includes an international field study with
+					over 10 factory visits to gain first-hand insights into global manufacturing processes and supplier
+					operations.</p>
 				<p>I have 17 years of retail leadership and analytical experience working directly with customers and
 					front-line employees to deliver world-class retail experiences and business results. Most recently,
 					I was responsible for building and developing a team of 15-45 retail employees and analyzing
