Update supply chain project

--- a/index.html
+++ b/index.html
@@ -442,11 +442,11 @@
 						</div>
 					</div>
 					<p>
-						You can see the arrows in green indicate new potential distribution routes. Fort Worth can
-						now ship to customers in Denver. Santa Fe can now ship to customers in Dallas, San Antonio,
-						Wichita, Kansas City, LA, and San Diego. And Las Vegas can now ship to customers in Denver, Salt
-						Lake City, and Phoenix. Supply and Demand remain the same, as do the restrictions on the
-						origin nodes.
+						The green arrows highlight new potential distribution routes. Fort Worth can now ship to
+						customers in Denver, while Santa Fe can extend its reach to customers in Dallas, San Antonio,
+						Wichita, Kansas City, Los Angeles, and San Diego. Additionally, Las Vegas can now serve
+						customers in Denver, Salt Lake City, and Phoenix. The supply and demand levels remain unchanged,
+						as do the restrictions on the origin nodes.
 					</p>
 					<div class="image">
 						<h5><span style="color: dodgerblue;">Figure 4</span>. Optimal solution without distribution
