fix image issue

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
 							center limitations
 						</h5>
 						<div class="image fit">
-							<img title="Click to open in a new tab" src="images/Transshipment Optimization model 2.png"
+							<img title="Click to open in a new tab" src="images/Transshipment Optimization Model 2.png"
 								alt="Transshipment optimization model" class="center">
 						</div>
 					</div>
