--- a/index.html
+++ b/index.html
@@ -69,13 +69,14 @@
 							alt="Machine Learning: Predicting Student Success" /></span></a>
 				<h4>Purpose</h4>
 				<p>
-					Global supply chains are complex systems, often responsible for shipping products from several
-					origin nodes to several transshipment nodes, and then on to several destination nodes. In a
-					transshipment problem, the objective is to determine how many units should be shipped over each arc
-					in the network so that all destination demands are satisfied with the minimum possible
-					transportation cost. Linear programming helps solve these network flow problems by providing a
-					mathematical means to determining the most efficient flow of goods throughout the distribution
-					network to minimize costs.
+					Global supply chains are intricate systems, responsible for moving products from multiple origin
+					nodes through various transshipment points to reach their final destinations. The goal in a
+					transportation problem is to determine the optimal number of units to ship across each segment of
+					the network, ensuring that all destination demands are met at the lowest possible transportation
+					cost. Supply chain managers must strategically allocate resources to achieve this objective.
+					However, determining the exact quantity of units to send to each destination can be complex. Linear
+					programming provides a mathematical approach to solving these network flow problems, enabling the
+					most efficient movement of goods across the distribution network while minimizing costs.
 				</p>
 
 				<div class="read-more-container">
