--- a/index.html
+++ b/index.html
@@ -69,14 +69,19 @@
 							alt="Machine Learning: Predicting Student Success" /></span></a>
 				<h4>Purpose</h4>
 				<p>
-					Global supply chains are intricate systems, responsible for moving products from multiple origin
-					nodes through various transshipment points to reach their final destinations. The goal in a
-					transportation problem is to determine the optimal number of units to ship across each segment of
-					the network, ensuring that all destination demands are met at the lowest possible transportation
-					cost. Supply chain managers must strategically allocate resources to achieve this objective.
-					However, determining the exact quantity of units to send to each destination can be complex. Linear
-					programming provides a mathematical approach to solving these network flow problems, enabling the
-					most efficient movement of goods across the distribution network while minimizing costs.
+					Global supply chains are complex systems responsible for moving products from multiple origin
+					locations to various transshipment points (such as distribution centers), and finally to their
+					intended destinations. In supply chain management, one of the primary challenges is solving the
+					transportation problem, which involves determining the optimal number of units to ship across each
+					segment of the network. The objective is to ensure that all destination demands are met while
+					minimizing transportation costs.
+				</p>
+				<p>
+					Supply chain managers must strategically allocate resources to achieve cost-effective and efficient
+					distribution. However, this task is complicated by the need to balance multiple variables, including
+					production capacity, demand requirements, and transportation costs. Linear programming provides a
+					mathematical approach to solving these network flow problems, enabling the most efficient movement
+					of goods across the distribution network while minimizing costs and satisfying demand requirements.
 				</p>
 
 				<div class="read-more-container">
