Added time series project

--- a/index.html
+++ b/index.html
@@ -61,6 +61,50 @@
 			</article>
 
 			<!-- Projects -->
+			<article id="projects" data-project="store-sales-time-series-forecasting-with-RStudio">
+				<h2><a title="View on Kaggle" href="https://www.kaggle.com/code/chaser260/sales-forecasting"
+						class="major">Time Series Store Sales Forecasting with R Studio</a></h2>
+				<a title="View on Kaggle" href="https://www.kaggle.com/code/chaser260/sales-forecasting"><span
+						class="image main"><img src="images/time-series-sales-forecasting.png"
+							alt="Time Series Store Sales Forecasting with R Studio" /></span></a>
+				<h4>Purpose</h4>
+				<p>
+					This project served as my final exam in my GSCM 571 Business Analytics I class. The focus of the
+					class was the application of key analytics methods dealing with statistics, probability, and
+					forecasting
+					using R Studio. The data is from the Store Sales - Time Series Forecasting competition on Kaggle.
+					The data set contains store sales on data from Corporación Favorita, a large Ecuadorian-based
+					grocery retailer. The training data includes dates, store and product information, whether that item
+					was being promoted, and the sales numbers. Additional files include supplementary information
+					relating to holidays, transactions, and the price of oil that will be useful in building an accurate
+					model.
+				</p>
+
+				<div class="read-more-container">
+					<p>
+						The original competition is designed to predict unit sales for thousands of items sold at
+						different Favorita stores, but I have modified the scope of this project, limiting it to
+						predicting sales for the top-selling product family from the highest volume store so as to use
+						the same forecasting methods covered in class. I also bring in two quick ARIMA time series
+						models to fill future values for oilprice and transactions in the test data.
+					</p>
+					<p>My goal for this project was to identify and explain how the predictor variables relate to sales
+						for a particular product family and how the information can be used to help inform management
+						decisions. I offer a detailed explanation of my thought process at every step, along with the
+						interpretation of statistical results including evaluating model fit based on collinearity,
+						hypothesis testing, confidence intervals, standard deviation of the residuals, and prediction
+						intervals. I conclude with a brief summary of my results and include some specific examples of
+						how the information can help inform specific decisions.
+					</p>
+					<p>
+						Check out the full project on <a
+							href="https://www.kaggle.com/code/chaser260/sales-forecasting">Kaggle</a>.
+					</p>
+				</div>
+				<button class="read-more-button">Read more...</button>
+				<button class="read-less-button">Read less...</button>
+			</article>
+
 			<article id="projects" data-project="supply-chain-design-transshipment-optimization">
 				<h2><a title="Supply Chain Optimization - A Transshipment Problem" class="major">Supply Chain
 						Optimization With LINGO</a></h2>
