--- a/index.html
+++ b/index.html
@@ -1495,7 +1495,7 @@
 					including omnichannel programs, Customer Returns, Digital Subscriptions, workforce management
 					systems, inventory management systems, and more.</p>
 				<p>I am currently looking to transfer my skills to a global organization where I can challenge myself to
-					solve progressively difficult problems while continuously learning nea skills. My long-term goal is
+					solve progressively difficult problems while continuously learning new skills. My long-term goal is
 					to grow with the company and continue to advance my knowledge, skills, and contributions at various
 					levels of supply chain and business strategy. If you are a recruiter or a hiring manager, I would
 					love to share how my experiences will add value to your team.
